<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <name>eLicence</name>
  <groupId>net.eiroca</groupId>
  <artifactId>eLicence</artifactId>
  <version>0.0.10</version>
  <packaging>pom</packaging>
  <organization>
    <name>net.eiroca</name>
    <url>www.eiroca.net</url>
  </organization>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdk.version>1.8</jdk.version>
    <eLib.version>0.0.10</eLib.version>
    <slf4j.version>1.7.32</slf4j.version>
    <log4j.version>2.14.1</log4j.version>
    <spark.version>2.9.3</spark.version>
  </properties>
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
      <!-- Set a JDK compiler level -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>
      <!-- Make the jar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <!-- DO NOT include log4j.properties file in your Jar -->
          <excludes>
            <exclude>**/log4j.properties</exclude>
            <exclude>**/simplelogger.properties</exclude>
            <exclude>**/placeholder</exclude>
          </excludes>
        </configuration>
      </plugin>
      <!-- Copy project dependency -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <!-- exclude junit, we need runtime dependency only -->
              <includeScope>runtime</includeScope>
              <outputDirectory>${project.build.directory}/libs/</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <modules>
    <module>eLicence-API</module>
    <module>eLicence-Server</module>
    <module>LicenseTool</module>
    <module>BulkGenerator</module>
  </modules>
</project>